# jsPsych

./: .gitignore  .travis.yml  404.html  CITATION.cff  CNAME  IAT Experiment  IAT_Example.html  README  README.md  SECURITY.md  Thumbs.db  babel.config.js  canvastest.html  code-of-conduct.md  contributors.md  create_redirects.py  eslint.config.js  get_simulate_method.js  gulpfile.js  index.html  jquery.canimate.js  jspsych-active-match.js  jspsych-animation.js  jspsych-ballistic-match-2.js  jspsych-ballistic-match.js  jspsych-call-function.js  jspsych-categorize-animation.js  jspsych-categorize-feedback.js  jspsych-categorize-multi.js  jspsych-categorize-unknown.js  jspsych-free-sort.js  jspsych-html.js  jspsych-paint.js  jspsych-samedifferent.js  jspsych-similarity.js  jspsych-singleimage-keyresponse.js  jspsych-storybook.js  jspsych-text.js  jspsych-touch-freepick.js  jspsych-twoimage-keyresponse.js  (+24 more)
.changeset/: add-multiplayer-api.md  add-survey-multi-choice-response-index.md  afraid-badgers-lie.md  allow-blob-video.md  audio-stop-bug.md  beige-years-care.md  blue-carrots-relate.md  blue-donuts-relate.md  blue-seahorses-add.md  blue-swans-boil.md  bright-apples-hope.md  bright-pillows-collect.md  bright-tables-provide.md  busy-tires-reply.md  button-layouts.md  button-response-plugins.md  calm-books-wink.md  chilled-papayas-admire.md  chilly-pans-sin.md  clean-insects-juggle.md  clever-coats-invent.md  cold-dancers-cover.md  cold-starfishes-tell.md  config-dep-security-bumps.md  config.json  cool-creatures-crawl.md  core-rewrite.md  cuddly-coins-fold.md  (+151 more)
6.3/: 404.html  (+2 more)
(+2899 files in other folders)
