[tool.poetry]
name = "docs"
version = "0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.15"
mike = "^1.1.2"

[tool.poetry.group.dev.dependencies]
mkdocs-macros-plugin = "^0.7.0"
jsonpath-ng = "^1.5.3"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"