[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2024.07.04"
urllib3 = "^2.3.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mike = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
